--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,24 @@
         android:theme="@style/Theme.ItbruMarketPlace"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".NavigationActivity"
+            android:exported="true"
+            android:label="@string/title_activity_navigation">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+
+        </activity>
+        <activity android:name="com.myproject.itbrumarketplace.ui.login.LoginActivity" />
     </application>
 
 </manifest>
